# IMAC1-Prog-Algo-S2

./: .gitignore
TD3/: CMakeLists.txt  readme.md
TD3/include/: sorts.hpp
TD3/src/: sorts.cpp
TD3/src/exo1/: main.cpp
TD3/src/exo2/: main.cpp
TD3/src/exo3/: main.cpp
TD3/src/exo4/: main.cpp
TD5/: CMakeLists.txt
TD5/src/exo1/: main.cpp
TD5/src/exo2/: main.cpp
